02-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-db
  labels:
    app: camunda-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-db
  template:
    metadata:
      labels:
        app: camunda-db
    spec:
      containers:
        - name: camunda-db
          image: postgres:13.3
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: camunda-db-volume
      volumes:
        - name: camunda-db-volume
          persistentVolumeClaim:
            claimName: camunda-db-claim
