04-camunda-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda
  labels:
    app: camunda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda
  template:
    metadata:
      labels:
        app: camunda
    spec:
      containers:
        - name: camunda
          image: camunda/camunda-bpm-platform:latest
