elasticsearch-camunda-zeebe-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-camunda-zeebe-pod
  labels:
    app: elasticsearch-camunda-zeebe-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-camunda-zeebe-pod
  template:
    metadata:
      labels:
        app: elasticsearch-camunda-zeebe-pod
    spec:
      containers:
      - name: elasticsearch-camunda-zeebe-pod
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
        volumeMounts:
        - name: elasticsearch-camunda-zeebe-pvc
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: elasticsearch-camunda-zeebe-pvc
        persistentVolumeClaim:
          claimName: elasticsearch-camunda-zeebe-pvc
