03-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-db-service
spec:
  selector:
    app: camunda-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: camunda-db
