camunda-zeebe-operate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-zeebe-operate-service
spec:
  selector:
    app: camunda-zeebe-operate-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: "8080"
