elasticsearch-camunda-zeebe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-camunda-zeebe-service
spec:
  selector:
    app: elasticsearch-camunda-zeebe-pod
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
      name: pod
