06-camunda-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: #{DOMAIN}#
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: camunda-service
            port:
              number: 8080
          path: /camunda(/|$)(.*)
