camunda-zeebe-operate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-zeebe-operate-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
spec:
  rules:
  - host: #{DOMAIN}#
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: camunda-zeebe-operate-service
            port:
              number: 8080
